[package]
name = "rpi-gps-recorder-rs"
version = "0.1.0"
authors = ["ckfy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_gps = "0.4.1"
gpx = "0.8.5"
chrono = "0.4"
geo-types = "0.7"

[[bin]]
name = "recorder"
path = "src/main.rs"