[package]
authors = ["Nelson Chan"]
edition = "2018"
name = "rpi-gps-recorder-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_gps = "0.4.1"
chrono = "0.4"
ctrlc = { version = "3.2", features = ["termination"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.gpx]
features = ["use-serde"]
version = "0.8"

[dependencies.geo]
features = ["serde"]
version = "0.24.1"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.29"

[[bin]]
name = "recorder"
path = "src/main.rs"
