[package]
authors = ["Nelson Chan"]
edition = "2018"
name = "rpi-gps-recorder"
version = "0.1.0"
default-run = "recorder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "convert-db"
path = "src/bin/convertdb.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[dependencies]
adafruit_gps = "0.4.1"
ctrlc = { version = "3.2", features = ["termination"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.time]
features =  ["serde", "formatting", "parsing", "macros"]
version = "0.3.21"

[dependencies.gpx]
features = ["use-serde"]
version = "0.8.6"

[dependencies.geo]
features = ["serde"]
version = "0.24.1"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.29"
